FIX: Many small fix after running Findbugs on Eoulsan source code.